added workflow_dispatch to build action

--- a/.github/workflows/dotnetBuild.yml
+++ b/.github/workflows/dotnetBuild.yml
@@ -1,5 +1,4 @@
 name: dotnetBuild
-
 on:
   push:
     branches:
@@ -9,6 +8,7 @@ on:
     branches:
         - dev
         - main
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
