--- a/.github/workflows/angularBuild.yml
+++ b/.github/workflows/angularBuild.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: angularBuild
 on:
   push:
     branches:
@@ -11,6 +11,7 @@ on:
     branches:
       - main
       - dev
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,6 +27,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: npm --prefix ./client/ ci
+    - run: npm --prefix ./client/ run build --if-present
+    - run: npm --prefix ./client/ test
