--- a/.github/workflows/angularBuild.yml
+++ b/.github/workflows/angularBuild.yml
@@ -27,6 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: ./client/package-lock.json
     - run: npm --prefix ./client/ ci
     - run: npm --prefix ./client/ run build --if-present
     - run: npm --prefix ./client/ test
