--- a/.github/workflows/angularBuild.yml
+++ b/.github/workflows/angularBuild.yml
@@ -31,3 +31,28 @@ jobs:
     - run: npm --prefix ./client/ ci
     - run: npm --prefix ./client/ run build --if-present
     # - run: npm --prefix ./client/ test
+  
+  docker:
+      needs: build
+      runs-on: ubuntu-latest
+      steps:
+        -
+          name: Checkout 
+          uses: actions/checkout@v2
+        -
+          name: Login to Docker Hub
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+        -
+          name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v1
+        -
+          name: Build and push
+          uses: docker/build-push-action@v2
+          with:
+            context: ./client/
+            file: ./client/Dockerfile
+            push: true
+            tags: ${{ secrets.DOCKERHUB_USERNAME }}/p2client:latest
