--- a/server/Project3.Data/Project3.Data.csproj
+++ b/server/Project3.Data/Project3.Data.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Project3.Model\Project3.Model.csproj" />
+      <ProjectReference Include="..\Project3.Model\Project3.Model.csproj" />
+      <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
