--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,7 +9,7 @@ RUN npm install -g @angular/cli@14.1.1
 # copy everything else to be used (do not need to run npm build)
 COPY ./ ./
 
-# EXPOSE 4200
+EXPOSE 4200
 
 # CMD ng serve --host 0.0.0.0
 CMD ng serve
