--- a/.github/workflows/angularSonar.yml
+++ b/.github/workflows/angularSonar.yml
@@ -45,5 +45,6 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"CampbellKT95_sonar-testing" /o:"campbellkt95" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          npm --prefix ./client/ ci
           npm --prefix ./client/ run build
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
