Added some unit tests and fixes to controllers

--- a/server/Project3/Project3.csproj
+++ b/server/Project3/Project3.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Project3.Data\Project3.Data.csproj" />
     <ProjectReference Include="..\Project3.Model\Project3.Model.csproj" />
+	  <InternalsVisibleTo Include="$(AssemblyName).Test"/>
   </ItemGroup>
 
 </Project>
