Attempting to force an update on azure

--- a/.github/workflows/angularBuild.yml
+++ b/.github/workflows/angularBuild.yml
@@ -55,4 +55,4 @@ jobs:
             context: ./client/
             file: ./client/Dockerfile
             push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/p2client:latest
+            tags: ${{ secrets.DOCKERHUB_USERNAME }}/p2client:newest
